mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__proton_schemes__tests__transform_relative_urls.snap
---
source: mail/mail-html-transformer/src/tests/proton_schemes.rs
expression: transformer.to_string()
---
<html><head></head><body>
            <img src="proton-https://example.com/image.png">
            <img src="proton-https://dummy.com/example.com/relative.jpg">
            <div style="background-image: url(&quot;proton-https://cdn.example.com/bg.png&quot;)">Content</div>
        
    
    </body></html>
