mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__proton_schemes__tests__transform_to_proton_schemes_basic.snap
---
source: mail/mail-html-transformer/src/tests/proton_schemes.rs
expression: transformer.to_string()
---
<html><head></head><body>
            <img src="proton-https://example.com/image.png">
            <img src="proton-http://test.com/photo.jpg">
            <img src="">
            <div style="background-image: url(&quot;proton-https://background.com/bg.png&quot;)">Content</div>
        
    
    </body></html>
